The audio bell is now in 16 bit slinear format.

It is possible to use a frequency of 44.1 kHz as apposed to 8 kHz if
you specifiy:

options HIRES_BELL

in your kernel config file.

Changes to the way in which the wave is generated help reducing pops and
ticks in the bell.

The output of the high resolution bell has been tested extensively using
frequency spectographs generated by pkgsrc package audio/audacity.

This addresses PR kern/51784.